# learn-cmake

./: README.md
basic/build-type/: CMakeLists.txt  main.cc
basic/building-with-ninja/: CMakeLists.txt  main.cc
basic/compiler-flag/: CMakeLists.txt  main.cc
basic/compiling-with-clang/: CMakeLists.txt  main.cc  pre_test.sh  run_test.sh
basic/hello-cmake/: CMakeLists.txt  main.cpp
basic/hello-headers/: CMakeLists.txt
basic/hello-headers/src/: hello.cc  main.cc
basic/set-command/: CMakeLists.txt
basic/set-command/sub/: CMakeLists.txt
basic/shared-library/: CMakeLists.txt
basic/shared-library/src/: hello.cc  main.cc
basic/static-library/: CMakeLists.txt
basic/static-library/include/static/: hello.h
basic/static-library/src/: hello.cc  main.cc
code-generation/configure-files/: CMakeLists.txt  main.cc  path.h.in  ver.h.in
protobuf/: CMakeLists.txt  addressbook.proto  main.cc
sub-projects/: CMakeLists.txt
sub-projects/subbinary/: CMakeLists.txt  main.cc
sub-projects/sublibrary1/: CMakeLists.txt
sub-projects/sublibrary1/include/sublib1/: sublib1.h
sub-projects/sublibrary1/src/: sublib1.cc
sub-projects/sublibrary2/: '  CMakeLists.txt
sub-projects/sublibrary2/include/sublib2/: sublib2.h
tutorial/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cc
tutorial/MathFunctions/: CMakeLists.txt
